@@ -85,13 +85,8 @@ image.default <- function (x = seq(0, 1, length.out = nrow(z)),
 	    stop("must have one more break than colour")
 	if (any(!is.finite(breaks)))
 	    stop("breaks must all be finite")
-        ## spatstat passes a factor matrix here.
         z1 <- if (!is.double(z)) as.double(z) else z
-        if (!is.double(breaks)) breaks <- as.double(breaks)
-	zi <- .C("bincode",
-		 z1, length(z), breaks, length(breaks),
-		 code = integer(length(z)), (TRUE), (TRUE), noak = TRUE,
-		 NAOK = TRUE, DUP = FALSE, PACKAGE = "base") $code - 1
+        zi <- .bincode(z1, breaks, TRUE, TRUE) - 1L
     }
     if (!add)
 	plot(NA, NA, xlim = xlim, ylim = ylim, type = "n", xaxs = xaxs,
